# saver-bursts

./: Cargo.toml  README.md  build.rs  build_helpers.rs
assets/: idlescreen-bursts.desktop  idlescreen-bursts.xml  trance-bursts.desktop  trance-bursts.xml
src/: lib.rs
src/bursts/: bursts_tests.rs  draw.rs  drawing.rs  mod.rs  physics.rs  physics_tests.rs  types.rs
src/bursts/update/: mod.rs  particles.rs  rockets.rs
