[package]
license = "Apache-2.0"
name = "bursts"
version = "2.0.0"
edition = "2024"
description = "City skyline fireworks particle show"
publish = false
autobins = false

[lib]
name = "screensaver_bursts"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
trance-api = { path = "../idle/trance-api" }
libc = "0.2"

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "idle-saver-bursts"
provides = "trance-plugin-bursts"
replaces = "trance-plugin-bursts"
conflicts = "trance-plugin-bursts (<< 2.0.0)"
maintainer = "idlescreen <jerydleuck@gmail.com>"
extended-description = "City skyline fireworks particle show. Official IdleScreen (Trance) screensaver plugin."
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/libscreensaver_bursts.so", "usr/libexec/idle/screensavers/libscreensaver_bursts.so", "644"],
    ["assets/idlescreen-bursts.png", "usr/share/pixmaps/idlescreen-bursts.png", "644"]
]

[package.metadata.generate-rpm]
name = "idle-saver-bursts"
release = "1"
arch = "x86_64"
summary = "City skyline fireworks particle show"
description = "City skyline fireworks particle show"
license = "Apache-2.0"
assets = [
    { source = "target/release/libscreensaver_bursts.so", dest = "/usr/libexec/idle/screensavers/libscreensaver_bursts.so", mode = "644", user = "root", group = "root" },
    { source = "assets/idlescreen-bursts.png", dest = "/usr/share/pixmaps/idlescreen-bursts.png", mode = "644", user = "root", group = "root" }
]

[package.metadata.generate-rpm.requires]
idle = "*"

[package.metadata.generate-rpm.provides]
trance-plugin-bursts = "*"

[package.metadata.generate-rpm.obsoletes]
trance-plugin-bursts = "*"
